# kin

./: Makefile  pyproject.toml
app/: domain.py  exceptions.py  main.py  models.py  service.py
app/domain/: __init__.py  appointments.py  base_model.py  ports.py  users.py
src/api/: events.py
src/domain/: entities.py
tests/: test_appointments.py  test_e2e.py  test_unit.py
tests/unit/: conftest.py  test_appointments.py  test_user.py
