[project]
name = "kin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.118.3",
    "mypy>=1.18.2",
    "ruff>=0.14.0",
]

[tool.mypy]
strict = true


[dependency-groups]
dev = [
    "faker>=38.2.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-watcher>=0.4.3",
]
